# cpl-1

./: .gitignore  2024-maths-final.c  CMakeLists.txt  README.md  cardboard.c  test.c
final-test/: CMakeLists.txt
final-test/b-ternary/: CMakeLists.txt  b-ternary.c
final-test/checker/: CMakeLists.txt  checker.c
final-test/ddl/: CMakeLists.txt  ddl.c
final-test/gobang/: CMakeLists.txt  gobang.c
final-test/lineup/: CMakeLists.txt  lineup.c
final-test/merge/: merge.c
final-test/rna/: CMakeLists.txt  rna.c
final-test/rolling/: CMakeLists.txt  rolling.c
final-test/sorted/: CMakeLists.txt  sorted.c
homework/: CMakeLists.txt
homework/10/: CMakeLists.txt
homework/5/: CMakeLists.txt
homework/6/: CMakeLists.txt
homework/7/: CMakeLists.txt
homework/8/: CMakeLists.txt
homework/9/: CMakeLists.txt
homework/exam-1/: CMakeLists.txt
homework/exam-2/: CMakeLists.txt
luogu/: CMakeLists.txt
luogu/p1010/: p1010.c
luogu/p1019/: CMakeLists.txt  p1019.c
luogu/p1080/: CMakeLists.txt  p1080.c
luogu/p1083/: CMakeLists.txt  p1083.c
luogu/p1094/: CMakeLists.txt  p1094.c
luogu/p1152/: CMakeLists.txt  p1152.c
luogu/p1208/: p1208.c
luogu/p1309/: CMakeLists.txt  p1309.c
luogu/p1429/: CMakeLists.txt  p1429.c
luogu/p1601/: p1601.c
luogu/p1908/: p1908.c
luogu/p1914/: p1914.c
luogu/p2280/: CMakeLists.txt  p2280.c
luogu/p3397/: CMakeLists.txt  p3397.c
luogu/p5461/: CMakeLists.txt  p5461.c
luogu/p5595/: CMakeLists.txt  p5595.c
luogu/p5707/: CMakeLists.txt  p5707.c
personal/: CMakeLists.txt
test-2021/: CMakeLists.txt
(+76 files in other folders)
